--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript">
+
+      if (screen.width <= 960) {
+      hellotext.style.display = 'none'
+      }
+      
+      </script>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>TwrpForDay!</title>
