--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>TwrpForDay!</title>
-    <script>
-      function hidetext() {
-        var hellotext = document.getElementById("HELLO")
-        hellotext.style.display = 'none'
-      }
-    </script>
 </head>
 <body>
- <p>503: Temporarily Not Available</p>
+ <p>Ooops! We are updating... Please wait</p>
 </body>
 </html>
